[gd_scene load_steps=8 format=3 uid="uid://b5rac3bn806k0"]

[ext_resource type="Script" path="res://scenes/projectiles/spark_projectile.gd" id="1_q658l"]
[ext_resource type="Material" uid="uid://b304cpbvwydhs" path="res://particles/player_small_charge.tres" id="2_m687c"]
[ext_resource type="PlaneMesh" uid="uid://hnn3cqisno05" path="res://particles/mesh/square_mesh.tres" id="3_v1etk"]
[ext_resource type="Material" uid="uid://dtpkny3bvp3yd" path="res://particles/player_explosion.tres" id="4_0cqs3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uayi7"]
vertex_color_use_as_albedo = true
albedo_color = Color(20, 20, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_7aqq5"]
material = SubResource("StandardMaterial3D_uayi7")
radius = 0.05
height = 0.1
radial_segments = 8
rings = 4

[sub_resource type="SphereShape3D" id="SphereShape3D_qtxek"]
resource_local_to_scene = true
radius = 0.11

[node name="SparkProjectile" type="Node3D"]
script = ExtResource("1_q658l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_7aqq5")

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]
collision_layer = 4
collision_mask = 1025

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
shape = SubResource("SphereShape3D_qtxek")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ProjectileParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 70
one_shot = true
transform_align = 3
process_material = ExtResource("2_m687c")
draw_pass_1 = ExtResource("3_v1etk")

[node name="CollisionParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
process_material = ExtResource("4_0cqs3")
draw_pass_1 = ExtResource("3_v1etk")
